--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,15 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'publish'
+    publishWebProjects: true
 - task: AzureWebApp@1
   inputs:
     azureSubscription: 'Azure subscription 1'
+    appType: 'webAppWindows'
     appName: 'YourOsbbWebApp-230601110313'
-    package: $(System.DefaultWorkingDirectory)/**/*.zip   
+    package: '$(System.DefaultWorkingDirectory)/**/*.zip'
